src/objects/SuccessFee__c.object
<CustomObject>
    <fields>
        <fullName>AdoptionDecisionDay__c</fullName>
        <label>採用決定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AdoptionYear__c</fullName>
        <label>採用年度</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AdoptionYear</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>商談</label>
        <referenceTo>Opportunity__c</referenceTo>
        <relationshipLabel>採用決定</relationshipLabel>
        <relationshipName>SuccessFees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StudentID__c</fullName>
        <label>学生ID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>採用決定</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>採用決定-{0000}</displayFormat>
        <label>採用決定名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>